--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,10 @@ img.article-image {
   width: 50px;
   margin-top: 7px;
 }
+.portfolio-header {
+  position : relative;
+  background-image: url(https://lh3.googleusercontent.com/SNeG0GL9Pphg5kokb1wVn0VTE9LkJFL7IHXF3498C68JQIjft8RpPiybal63R8bPRQD2pwyqwXU0uqSmHPTBxq6QOvHI5FTotUfPqJwmaVxRdLMp7Pa5rXo8latFcEhG3sD4Fl6u8FrnsUdrTbPtVQv6DdgsvyVLzkuN0xCR7nh3BTgmmoKHPdeH_tRFgZTpSeGEIhToAaUyEB_NdeM4LX01HnwwxeLDi6k0QDm3w3qfV4RdksqWhs_A5qJ8Nxl_aOzMz9VGg0IGZh_v1V55oRAQdFXz_VuoM-5IZfeBQWRUZ24mA7C-U8j4J5syv4EXhy7_qHbbQvpFvBDi6S6ylHWSI1dJ05HCSN2MwyZ_iEQFkxzCZ2Sk5DvOVTw3iVWUGCGLCvl-MRob1Tdv7Tj8YR2vX0GdOgRCfMkBPr3CDhFVbHa6jteO7kSx28y1Ia9SOIxpzk5Da09R9h-tUGrcDIPc_KqEoDdKmn28zlTat7JFA-OC3VZc9-XqokB6Qz2BiiWWSF5e4GhoHAaa5BOAtO8QzNSw79QSKzqknxBpXxo6W1eOoy4Nc17ZuZRN8hkh0MUAF_JRh_AImcXmnGu1AdvZ-yP8NBPtWbiiYoDqJyf73L1ZufJu35QZAYG7qyBXzma-NLtbPO-nqQpxEc2_173yFLV-gXIQ=w1161-h653-no);
+}
 .portfolio-header .mdl-layout__header-row {
   padding: 0;
   -webkit-justify-content: center;
@@ -67,6 +71,11 @@ img.article-image {
   font-size: 14px;
   text-align: center;
   font-weight: 300;
+}
+span{
+  /* color:white; */
+  padding-top: 2pt;
+  padding: 1pt;
 }
 .is-compact .mdl-layout__title span {
   display: none;
@@ -128,7 +137,18 @@ body {
   font-family: sans-serif;
   background: #292f33;
 }
-
+ul.todo li ,form label.todo , h3.todo ,div.todo button{
+  color : rgb(141,217,252);
+}
+/* form label.todo {
+  color : rgb(141,217,252);
+}
+h3.todo {
+  color : rgb(141,217,252);
+}
+div.todo button{
+  color : rgb(141,217,252);
+} */
 /* button {
   margin: 30px;
   font-size: 18px;
