--- a/src/App.css
+++ b/src/App.css
@@ -74,8 +74,10 @@ img.article-image {
 }
 span{
   /* color:white; */
-  padding-top: 2pt;
-  padding: 1pt;
+  /* margin-top: -2pt; */
+  /* padding: 1pt; */
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
 }
 .is-compact .mdl-layout__title span {
   display: none;
