--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 .App {
   /* text-align: center; */
 }
@@ -21,6 +22,7 @@
 .App-intro {
   font-size: large;
 }
+
 img.article-image {
   width: 100%;
   height: auto;
@@ -77,7 +79,7 @@ span{
   /* margin-top: -2pt; */
   /* padding: 1pt; */
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
+  /* font-size: 30px; */
 }
 .is-compact .mdl-layout__title span {
   display: none;
@@ -99,6 +101,15 @@ span{
           align-items: center; 
   background-color: white;
   box-sizing: border-box;
+}
+.portfolio-contact .centerform {
+  margin-top: 15px;
+  width: 90%;
+}
+.portfolio-contact form {
+  max-width: 550px;
+  margin: auto;
+  
 }
 .social-btn {
   background-position: center;
